# SkillStar

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ADDING-AN-AGENT.md  AGENTS-UI.md  AGENTS.md  AGENTS_UI.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PRODUCT.md  README.md  THIRD_PARTY_NOTICES.md  biome.json  composer2.md  implementation_plan.md  index.html  minimax2.7.md  package-lock.json  package.json  run-build.sh  run-dev.sh  test_auth.js  test_parse  tsconfig.json  vite.config.ts  vitest.config.ts
crates/skillstar-ai/: Cargo.toml
crates/skillstar-ai/src/: lib.rs  translation_config.rs
crates/skillstar-app/: Cargo.toml
crates/skillstar-app/src/: lib.rs  usage_switch.rs
crates/skillstar-cli/: Cargo.toml
crates/skillstar-cli/src/: commands.rs  helpers.rs  lib.rs
crates/skillstar-commands/: Cargo.toml
crates/skillstar-commands/src/: acp.rs  agents.rs  launch.rs  lib.rs  marketplace.rs  network.rs  projects.rs  shell.rs
crates/skillstar-config/: Cargo.toml
crates/skillstar-config/src/: acp.rs  github_mirror.rs  lib.rs  proxy.rs
crates/skillstar-core-types/: Cargo.toml
crates/skillstar-core-types/src/: lib.rs  lockfile.rs  update_checker.rs
crates/skillstar-fingerprint/: Cargo.toml
crates/skillstar-fingerprint/src/: client.rs  http_profile.rs  ide_projector.rs  lib.rs  preset.rs  request.rs  store.rs  telemetry.rs  tls_profile.rs  types.rs
crates/skillstar-git/: Cargo.toml
crates/skillstar-git/src/: lib.rs  ops.rs
crates/skillstar-infra/: Cargo.toml
crates/skillstar-infra/src/: daily_log.rs  db_pool.rs  migration.rs  path_env.rs  paths.rs
crates/skillstar-marketplace-core/: Cargo.toml
crates/skillstar-marketplace-core/src/: snapshot.rs
crates/skillstar-model-config/: Cargo.toml
crates/skillstar-model-config/src/: circuit_breaker.rs  claude.rs  cloud_sync.rs  codex.rs  health.rs  lib.rs  opencode.rs  provider_states.rs  providers.rs  quota.rs  speedtest.rs  usage_tracker.rs
crates/skillstar-models/: Cargo.toml
crates/skillstar-models/src/: circuit_breaker.rs  latency.rs  lib.rs  mcp.rs  provider_ref.rs  providers.rs  providers_prop_tests.rs  tool_sync.rs
crates/skillstar-models/tests/: integration_flow_tests.rs  providers_prop_tests.rs  tool_sync_prop_tests.proptest-regressions  tool_sync_prop_tests.rs
crates/skillstar-patrol/: Cargo.toml
crates/skillstar-patrol/src/: config.rs  helpers.rs  lib.rs  types.rs
crates/skillstar-projects/: Cargo.toml
crates/skillstar-projects/src/: agents.rs  lib.rs  sync.rs
crates/skillstar-providers/: Cargo.toml
crates/skillstar-providers/src/: balance.rs  identity.rs  lib.rs
crates/skillstar-security-scan/: Cargo.toml
crates/skillstar-security-scan/src/: constants.rs  lib.rs  orchestrator.rs  policy.rs  scan.rs  smart_rules.rs  static_patterns.rs  types.rs
crates/skillstar-skill-core/: Cargo.toml
crates/skillstar-skill-core/src/: installed_skill.rs  lib.rs  local_skill.rs  lockfile.rs  shared.rs  skill_bundle.rs  skill_install.rs  skill_pack.rs  skill_update.rs  update_checker.rs
crates/skillstar-skills/: Cargo.toml
crates/skillstar-skills/src/: discovery.rs  frontmatter.rs  installed_skill.rs  lib.rs  local_skill.rs  lockfile.rs  shared.rs  skill_bundle.rs  skill_group.rs  skill_install.rs  skill_pack.rs  skill_update.rs  source_resolver.rs  update_checker.rs
crates/skillstar-ssh/: Cargo.toml
crates/skillstar-ssh/src/: client.rs  hub.rs  lib.rs  progress.rs  remote_fs.rs  sftp.rs  store.rs  system_config.rs  types.rs
crates/skillstar-sync/: Cargo.toml
crates/skillstar-sync/src/: client.rs  lib.rs  local_pack.rs  manifest.rs  progress.rs  store.rs  sync.rs  types.rs
crates/skillstar-terminal/: Cargo.toml
crates/skillstar-terminal/src/: config.rs  lib.rs  pane_command.rs  provider_env.rs  registry.rs  script_builder.rs  session.rs  terminal_launcher.rs  types.rs
crates/skillstar-translation/: Cargo.toml
crates/skillstar-translation/src/: api.rs  cache.rs  lib.rs  log.rs  markdown.rs  router.rs
crates/skillstar-usage/: Cargo.toml
crates/skillstar-usage/src/: alerts.rs  antigravity_oauth_config.rs  catalog.rs  cloud_code.rs  cookie_jar.rs  crypto.rs  http_client.rs  lib.rs  local_import.rs  oauth_clients.rs  protobuf_oauth.rs  qoder_machine.rs  refresh_guard.rs  storage.rs  subscription.rs  tool_paths.rs  vscdb.rs
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json  timeout
src-tauri/capabilities/: default.json  usage-card.json
src-tauri/crates/Markdown-Translator/: Cargo.toml
src-tauri/crates/marketplace-core/: Cargo.toml
src-tauri/crates/skill-core/: Cargo.toml
src-tauri/examples/: test_crypto.rs
src-tauri/icons/: icon.icns
src-tauri/prompts/ai/: marketplace_search.md  pick_skills.md  summary.md  translate.md  translate_chunk.md  translate_document.md  translate_document_hy_mt.md  translate_short.md  translate_short_hy_mt.md
src-tauri/prompts/security/: aggregator.md  chunk_batch.md  general_agent.md  resource_agent.md  script_agent.md  skill_agent.md
src-tauri/resources/: seed_registry.json
src-tauri/src/: cli.rs  commands.rs  lib.rs  main.rs
src-tauri/src/cli/: install.rs  manage.rs  mod.rs
src-tauri/src/commands/: acp.rs  adopt_folder.rs  agents.rs  ai.rs  bundles.rs  cookie_import.rs  deploy_mode.rs  fingerprints.rs  github.rs  launch.rs  marketplace.rs  mcp_commands.rs  mod.rs  models.rs  models_commands.rs  models_dto.rs  network.rs  oauth_commands.rs  patrol.rs  projects.rs  quota_commands.rs  s3_sync.rs  share_install.rs  shell.rs  skill_content.rs  skill_groups.rs  skill_paths.rs  skills.rs  ssh_hosts.rs  updater.rs  usage_commands.rs  usage_dto.rs  usage_switch.rs  usage_windows.rs
src-tauri/src/core/: acp_client.rs  agent_profile.rs  ai_provider.rs  app_shell.rs  db_pool.rs  dismissed_skills.rs  error.rs  gh_manager.rs  git_ops.rs  github_mirror.rs  installed_skill.rs  launch_deck.rs  local_skill.rs  lockfile.rs  marketplace.rs  marketplace_snapshot.rs  mod.rs  path_env.rs  paths.rs  patrol.rs  project_manifest.rs  proxy.rs  repo_history.rs  repo_scanner.rs  security_scan.rs  skill.rs  (+10 more)
(+978 files in other folders)
