[package]
name = "skillstar"
version = "0.1.2"
description = "SkillStar — Skill management for AI agents"
authors = ["SkillStar"]
edition = "2024"
rust-version = "1.94.1"

[lib]
name = "skillstar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
gix = { version = "0.80", default-features = false, features = ["max-control", "blocking-http-transport-reqwest-rust-tls", "revision", "credentials"] }
toml = "1.1"
tauri-plugin-dialog = "2"
serde_yaml = "0.9"
regex = "1"
machine-uid = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.11"
flate2 = "1"
tar = "0.4"
html2md = "0.2"
uuid = { version = "1", features = ["v4"] }
sys-locale = "0.3"
pbkdf2 = "0.12"
rusqlite = { version = "0.39.0", features = ["bundled"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
