[package]
name = "skillstar"
version = "0.1.6"
description = "SkillStar — Skill management for AI agents"
authors = ["SkillStar"]
edition = "2024"
rust-version = "1.94.1"

[workspace]
resolver = "3"
members = ["crates/marketplace-core"]

[lib]
name = "skillstar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
gix = { version = "0.80", default-features = false, features = ["max-control", "blocking-http-transport-reqwest-rust-tls", "revision", "credentials"] }
toml = "1.1"
tauri-plugin-dialog = "2"
serde_yaml = "0.9"
regex = "1"
machine-uid = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.11"
flate2 = "1"
tar = "0.4"
html2md = "0.2"
uuid = { version = "1", features = ["v4"] }
sys-locale = "0.3"
pbkdf2 = "0.12"
rusqlite = { version = "0.39.0", features = ["bundled"] }
r2d2_sqlite = "0.33.0"
r2d2 = "0.8.10"
pulldown-cmark = "0.13.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
thiserror = "2.0.18"
petgraph = "0.8.3"
agent-client-protocol = "0.10"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
async-trait = "0.1"
skillstar-marketplace-core = { path = "crates/marketplace-core" }
url = "2.5.8"

[dev-dependencies]
tempfile = "3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
junction = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
