[package]
name = "skillstar-ai"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "stream"] }
tracing = "0.1.44"
regex = "1.12"
machine-uid = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.11"
rand = "0.10.0"
skillstar-infra = { version = "0.1.0", path = "../skillstar-infra" }
skillstar-config = { version = "0.1.0", path = "../skillstar-config" }
skillstar-model-config = { version = "0.1.0", path = "../skillstar-model-config" }

[dev-dependencies]
tempfile = "3.27.0"
