[package]
name = "skillstar-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[lib]
name = "skillstar_app"
path = "src/lib.rs"

[[bin]]
name = "skillstar"
path = "src/bin/skillstar.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
skillstar-ai = { version = "0.1.0", path = "../skillstar-ai" }
skillstar-core = { version = "0.1.0", path = "../skillstar-core" }
skillstar-marketplace = { version = "0.1.3", path = "../skillstar-marketplace" }
skillstar-models = { version = "0.1.0", path = "../skillstar-models" }
skillstar-projects = { version = "0.1.0", path = "../skillstar-projects" }
skillstar-skills = { version = "0.1.0", path = "../skillstar-skills" }
tauri = { version = "2.11.1", features = ["tray-icon", "image-png"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
