[package]
name = "skillstar-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
skillstar-core-types = { version = "0.1.0", path = "../skillstar-core-types" }
skillstar-infra = { version = "0.1.0", path = "../skillstar-infra" }
skillstar-terminal = { version = "0.1.0", path = "../skillstar-terminal" }
skillstar-projects = { version = "0.1.0", path = "../skillstar-projects" }
skillstar-skill-core = { version = "0.1.0", path = "../skillstar-skill-core" }
