[package]
name = "skillstar-commands"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skillstar-infra = { version = "0.1.0", path = "../skillstar-infra" }
skillstar-config = { version = "0.1.0", path = "../skillstar-config" }
skillstar-projects = { version = "0.1.0", path = "../skillstar-projects" }
skillstar-terminal = { version = "0.1.0", path = "../skillstar-terminal" }
skillstar-marketplace-core = { version = "0.1.0", path = "../skillstar-marketplace-core" }
skillstar-ai = { version = "0.1.0", path = "../skillstar-ai" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
