[package]
name = "skillstar-config"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
skillstar-infra = { version = "0.1.0", path = "../skillstar-infra" }

[dev-dependencies]
tempfile = "3.27.0"
