[package]
name = "skillstar-infra"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.33.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"

[target."cfg(windows)".dependencies]
junction = "1.4.2"

[dev-dependencies]
tempfile = "3.27.0"
