[package]
name = "skillstar-models"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["sync", "rt", "time", "macros"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "stream"] }
tracing = "0.1.44"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5.0"
dirs = "5"
url = "2.5"
uuid = { version = "1.23.1", features = ["v4"] }
toml = "1.1"
skillstar-core = { version = "0.1.0", path = "../skillstar-core" }
skillstar-providers = { version = "0.1.0", path = "../skillstar-providers" }

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3.27.0"
