[package]
name = "skillstar-patrol"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.44"
skillstar-infra = { version = "0.1.0", path = "../skillstar-infra" }
skillstar-git = { version = "0.1.0", path = "../skillstar-git" }
skillstar-skills = { version = "0.1.0", path = "../skillstar-skills" }
