[package]
name = "skillstar-projects"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
skillstar-core = { version = "0.1.0", path = "../skillstar-core" }
toml = "1.1"
tracing = "0.1"
which = "8"

[dev-dependencies]
tempfile = "3"
