[package]
name = "skillstar-security-scan"
version = "0.1.0"
edition = "2024"

rust-version = "1.94.1"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.33.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
petgraph = "0.8.3"
skillstar-infra = { version = "0.1.0", path = "../skillstar-infra" }
skillstar-ai = { version = "0.1.0", path = "../skillstar-ai" }

[dev-dependencies]
tempfile = "3"
