[package]
name = "skillstar-skill-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
skillstar-core-types = { version = "0.1.0", path = "../skillstar-core-types" }
skillstar-marketplace-core = { path = "../../src-tauri/crates/marketplace-core" }

[dev-dependencies]
tempfile = "3"
