[package]
name = "skillstar-skills"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
skillstar-core = { version = "0.1.0", path = "../skillstar-core" }
gix = { version = "0.80", default-features = false, features = ["max-control", "blocking-http-transport-reqwest-rust-tls", "revision", "credentials"] }
serde_yaml = "0.9"
dirs = "5"
flate2 = "1"
sha2 = "0.11"
tar = "0.4"
toml = "1.1"
tokio = { version = "1", features = ["sync", "rt"] }
skillstar-marketplace = { version = "0.1.3", path = "../skillstar-marketplace" }
skillstar-projects = { version = "0.1.0", path = "../skillstar-projects" }

[dev-dependencies]
tempfile = "3"

[target."cfg(windows)".dependencies]
junction = "2.0.0"
