[package]
name = "skillstar-sync"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[dependencies]
skillstar-core = { version = "0.1.0", path = "../skillstar-core" }
skillstar-skills = { version = "0.1.0", path = "../skillstar-skills" }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["sync", "rt", "macros", "fs", "io-util"] }
tracing = "0.1.44"
toml = "1.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
# S3-compatible object storage. aws-sdk-s3 talks to any S3 API
# (Cloudflare R2 / Backblaze B2 / 七牛云 / 阿里云 OSS / 腾讯云 COS / AWS S3 / MinIO)
# once a custom endpoint_url is supplied via S3TargetDef.
aws-sdk-s3 = "1"
aws-config = { version = "1", default-features = false, features = ["rustls"] }
# Content-addressed tarballs (sha256) + packing for local-authored skills.
sha2 = "0.11"
tar = "0.4"
flate2 = "1"
# keyring v4 default (`v1`) bundles the native store for each desktop OS
# (same configuration as skillstar-ssh — credentials never touch the TOML).
keyring = { version = "4", default-features = false, features = ["v1"] }

[dev-dependencies]
tempfile = "3.27.0"
