[package]
name = "skillstar-usage"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4.44", features = ["serde"] }
machine-uid = "0.5"
aes-gcm = "0.10"
sha2 = "0.11"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tiny_http = "0.12"
tracing = "0.1.44"
url = "2.5"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
skillstar-core = { version = "0.1.0", path = "../skillstar-core" }

[dev-dependencies]
tempfile = "3.27.0"
