[package]
name = "markdown-translator"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
description = "High-performance AI Agent-based Markdown translation pipeline"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
pulldown-cmark = "0.13.3"
regex = "1"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
